# fastdedup

./: CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE.md  PLAN.md  README.md  TESTING_GUIDE.md  test_dedup.sh
.github/ISSUE_TEMPLATE/: bug_report.md
benchmarks/: README.md  hyperfine_comparison.sh  hyperfine_fuzzy_comparison.sh  requirements.txt  run_comparison.sh  run_fuzzy_comparison.sh  visualize_results.py
benchmarks/baselines/: minhash_lsh_dedup_parquet.py  optimized_dedup.py  optimized_fuzzy_dedup.py  pandas_dedup.py  pandas_fuzzy_dedup.py  polars_dedup.py  polars_fuzzy_dedup.py  rapidfuzz_benchmark.py  streaming_dedup.py  streaming_fuzzy_dedup.py
benchmarks/benchmark-output/results_exact/: python_exact.psrecord.csv  python_exact.stdout.txt  python_exact.time.txt  python_exact_baseline.py  rust_exact.psrecord.csv  rust_exact.psrecord.stderr.txt  rust_exact.stdout.txt  rust_exact.time.txt  system_info.txt
benchmarks/benchmark-output/results_fuzzy/: datatrove_fuzzy_baseline.py  python_fuzzy.psrecord.csv  python_fuzzy.stdout.txt  python_fuzzy.time.txt  rust_fuzzy.psrecord.csv  rust_fuzzy.stdout.txt  rust_fuzzy.time.txt  system_info.txt
crates/cli/: Cargo.toml
crates/cli/examples/: dedupe_file.rs  generate_test_data.rs  quality_demo.rs
crates/cli/src/: config.rs  disk_kv.rs  main.rs  progress.rs  resource_monitor.rs
crates/cli/src/tui/: mod.rs  runner.rs  ui.rs
crates/core/: Cargo.toml
crates/core/benches/: dedup_bench.rs
crates/core/src/: dedup.rs  error.rs  exact_dedup.rs  fuzzy_dedup.rs  hash.rs  hash_storage.rs  lib.rs  memory.rs  minhash.rs  pipeline.rs  signature_store.rs
crates/filters/: Cargo.toml
crates/filters/benches/: text_bench.rs
crates/filters/src/: error.rs  language.rs  length_filter.rs  lib.rs  quality.rs  text_preprocessing.rs
crates/formats/: Cargo.toml
crates/formats/src/: error.rs  jsonl.rs  lib.rs  parquet_reader.rs  parquet_writer.rs  reader.rs  record.rs
docs/: _config.yml  index.md
examples/: README.md  config-multilingual.yaml  config-strict.yaml  config.toml  config.yaml  filters-only.yaml
