[workspace]
members = [
    "crates/core",
    "crates/formats",
    "crates/filters",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dataset Dedup Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallel processing
rayon = "1.8"

# Compression
flate2 = "1.0"

# Parquet/Arrow
arrow = "53.3"
parquet = "53.3"

# Hashing
seahash = "4.1"

# Progress tracking
indicatif = "0.17"
