[workspace]
members = [
    "crates/core",
    "crates/formats",
    "crates/filters",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dataset Dedup Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Parallel processing
rayon = "1.8"

# Compression
flate2 = "1.0"

# Parquet/Arrow
arrow = "53.3"
parquet = "53.3"

# Hashing
seahash = "4.1"
ahash = "0.8"

# Progress tracking
indicatif = "0.17"

# Bloom filter
bloomfilter = "1.0"

# Embedded database
sled = "0.34"

# Text processing
regex = "1.10"
unicode-normalization = "0.1"

# Quality filters
whatlang = "0.16"
rustrict = "0.7"
bincode = "1.3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
