[package]
name = "dataset-dedup-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dataset-dedup"
path = "src/main.rs"

[dependencies]
dataset-dedup-core = { path = "../core" }
dataset-dedup-formats = { path = "../formats" }
dataset-dedup-filters = { path = "../filters" }

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
indicatif.workspace = true
