[package]
name = "dataset-dedup-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dataset-dedup"
path = "src/main.rs"

[dependencies]
dataset-dedup-core = { path = "../core" }
dataset-dedup-formats = { path = "../formats" }
dataset-dedup-filters = { path = "../filters" }

anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
indicatif.workspace = true
rayon.workspace = true
sled.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[dev-dependencies]
tempfile = "3.8"
