[package]
name = "fastdedup-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "fastdedup"
path = "src/main.rs"

[dependencies]
fastdedup-core = { path = "../core" }
fastdedup-formats = { path = "../formats" }
fastdedup-filters = { path = "../filters" }

anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
indicatif.workspace = true
rayon.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[dev-dependencies]
tempfile = "3.8"
