[package]
name = "dataset-dedup-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
seahash.workspace = true
rayon.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
