[package]
name = "fastdedup-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
seahash.workspace = true
ahash.workspace = true
rayon.workspace = true
bloomfilter.workspace = true
sled.workspace = true
regex.workspace = true
unicode-normalization.workspace = true
fastdedup-filters = { path = "../filters" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "dedup_bench"
harness = false
