[package]
name = "dataset-dedup-filters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rayon.workspace = true
regex.workspace = true
unicode-normalization.workspace = true

# Phase 5: Quality Filters
whatlang.workspace = true
rustrict.workspace = true
bincode.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = "0.5"

[[bench]]
name = "text_bench"
harness = false
